application/brennoflavio/homeassistant/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    kubernetes.io/service-name: homeassistant
addressType: IPv4
ports:
  - name: http
    port: 80
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.0.201
    conditions:
      ready: true
