application/brennoflavio/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
