application/brennoflavio/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
spec:
  ingressClassName: external-nginx
  rules:
  - host: homeassistant.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 80
  tls:
  - hosts:
    - homeassistant.brennoflavio.com.br
    secretName: homeassistant-tls
